# cel-rust

./: .release-plz.toml  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  rustfmt.toml
.github/workflows/: pull-request.yml  rust.yml
antlr/: CHANGELOG.md  Cargo.toml
antlr/src/: lib.rs  parser.rs  reference.rs
antlr/src/common/: mod.rs  types.rs
cel/: CHANGELOG.md  Cargo.toml
cel-derive/: Cargo.toml  README.md
cel-derive/src/: lib.rs
cel-derive/tests/expand/: basic_struct.expanded.rs  basic_struct.rs  newtype_struct.expanded.rs  newtype_struct.rs  unit_enum.expanded.rs  unit_enum.rs  unit_enum_rename.expanded.rs  unit_enum_rename.rs  with_flatten.expanded.rs  with_flatten.rs  with_helpers.expanded.rs  with_helpers.rs  with_mixed_annotations.expanded.rs  with_mixed_annotations.rs  with_option.expanded.rs  with_option.rs  with_rename.expanded.rs  with_rename.rs  with_rename_all_camel.expanded.rs  with_rename_all_camel.rs  with_rename_all_lowercase.expanded.rs  with_rename_all_lowercase.rs  with_serde.expanded.rs  with_serde.rs  with_serde_multi_args.expanded.rs  with_serde_multi_args.rs  with_serde_rename_all.expanded.rs  with_serde_rename_all.rs  with_skip.expanded.rs  with_skip.rs  with_skip_serializing_if.expanded.rs  with_skip_serializing_if.rs
cel-jit/: Cargo.toml  EXPERIMENT_LOG.md  README.md
cel-jit/benches/: comparison.rs
cel-jit/src/: error.rs  lib.rs
cel-jit/src/compiler/: lowering.rs  mod.rs  runtime.rs
cel-jit/src/runtime/: mod.rs  ops.rs  value.rs
cel/benches/: runtime.rs
cel/src/: context.rs  duration.rs  env.rs  functions.rs  json.rs  lib.rs  macros.rs  magic.rs  objects.rs  optimize.rs  proto_compare.rs  resolvers.rs  ser.rs  test.rs  test_utils.rs
cel/src/checker/: container.rs  env.rs  mod.rs  stdlib.rs  types.rs
cel/src/common/: decls.rs  functions.rs  mod.rs  reference.rs  traits.rs  value.rs
cel/src/common/ast/: mod.rs
cel/src/common/types/: bool.rs  bytes.rs  double.rs  duration.rs  err.rs  int.rs  list.rs  map.rs  mod.rs  null.rs  optional.rs  string.rs  struct.rs  timestamp.rs  uint.rs
cel/src/functions/: mod.rs  time.rs
cel/src/functions/k8s/: list.rs  mod.rs
cel/src/parser/: macros.rs  mod.rs  parse.rs  parser.rs  reference.rs  references.rs
cel/src/parser/ast/: mod.rs
cel/src/stdlib/: mod.rs
cel/src/types/: bytes.rs  dynamic.rs  list.rs  map.rs  mod.rs  object.rs  opaque.rs  optional.rs  string.rs  time.rs
cel/tests/: security_tests.rs  test_qualified_resolution.rs
conformance/: Cargo.toml  README.md  build.rs
conformance/src/: lib.rs  proto.rs  runner.rs  textproto.rs  type_env.rs  value_converter.rs
conformance/tests/: conformance.rs
example/: CHANGELOG.md  Cargo.toml
example/src/: anyhow.rs  axum.rs  functions.rs  json.rs  resolver.rs  serde.rs  simple.rs  threads.rs  variables.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: program_compile.rs  value_binop.dict  value_binop.rs
interpreter/: CHANGELOG.md  Cargo.toml  README.md
interpreter/benches/: runtime.rs
interpreter/src/: context.rs  functions.rs  json.rs  lib.rs  magic.rs  objects.rs
