[package]
name = "cel"
description = "A parser and interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/cel-rust/cel-rust"
version = "0.13.0"
authors = ["Clark McCauley <me@clarkmccauley.com>", "Alex Snaps <alex@wcgw.dev>"]
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
categories = ["compilers"]

[dependencies]
antlr4rust = "0.5.2"
lazy_static = "1.5.0"
nom = "7.1.3"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"], optional = true }
regex = { version = "1.10.5", optional = true }
serde = "1.0"
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bytes = { version = "1", optional = true }

thiserror = "1.0"
paste = "1.0"
hashbrown = "0.16.1"
linkme = "0.3.35"
vector-map = { version = "1.0.2", features = ["serde_impl"] }
itertools = "0.14.0"
http = "1.4.0"
erased-serde = "0.4.9"

[dev-dependencies]
pprof = { version = "0.15", features = ["protobuf", "protobuf-codec", "criterion"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"
dhat = { version = "0.3.3" }
tracking-allocator = "0.4.0"

[[bench]]
name = "runtime"
harness = false

[features]
default = ["regex", "chrono", "json", "bytes"]
bytes = ["dep:bytes"]
json = ["dep:serde_json", "dep:base64"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]
dhat-heap = [] # if you are doing heap profiling
