[package]
name = "cel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.cel]
path = "../cel"
features = ["arbitrary"]

[[bin]]
name = "value_binop"
path = "fuzz_targets/value_binop.rs"
test = false
doc = false
bench = false

[[bin]]
name = "program_compile"
path = "fuzz_targets/program_compile.rs"
test = false
doc = false
bench = false
